@@ -33,6 +33,9 @@ plugins {
     id 'org.beryx.runtime' version '1.12.6'
 }
 
+applicationDefaultJvmArgs = ["--enable-preview"]
+
+
 javafx {
     version = "16"
     modules = [ 'javafx.controls', 'javafx.web', 'javafx.swing', 'javafx.fxml', 'javafx.graphics' ]
